--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# DEP Vendor
+vendor
+
+# Executable for UNIX variants
+harpocrates
