--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,3 +28,11 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  name = "github.com/manifoldco/promptui"
+  version = "0.3.2"
+
+[[constraint]]
+  name = "github.com/vmihailenco/msgpack"
+  version = "4.0.4"
